// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Inputs/TreeSpeciesInput Default 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="inline-block uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r1j:"
  >
    Tree Species Grown *
  </label>
  <p
    className="text-light-body-300 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "List the tree species that you expect to restore on this project, across all sites. Please enter the scientific name for each tree species.",
      }
    }
    data-testid="txt"
    id=":r1j:-description"
  />
  <div>
    <div
      className="mt-8 mb-2 flex justify-between"
    >
      <p
        className="uppercase text-body-900"
        data-testid="txt"
      >
        Tree Species (1)
      </p>
    </div>
    <div
      className="max-h-[300px] overflow-y-auto"
    >
      <div
        className="relative flex w-full"
      >
        <div
          className="flex-1 relative space-y-2"
        >
          <div
            className="relative"
          >
            <input
              aria-describedby=":r1k:-description"
              aria-invalid={false}
              className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent border-0 border-b py-[10px] pr-4 pl-0 border-b-neutral-400"
              defaultValue="Test"
              id=":r1k:"
              name="name"
              onChange={[Function]}
              onKeyDownCapture={[Function]}
              placeholder="Tree species name"
              type="text"
            />
          </div>
        </div>
        <button
          className="flex items-center justify-center rounded-full hover:bg-opacity-60 absolute right-0 top-3"
          onClick={[Function]}
        >
          <div
            style={
              Object {
                "height": undefined,
                "width": 22,
              }
            }
          />
        </button>
      </div>
    </div>
    <button
      className="mt-4 w-fit bg-white border border-neutral-1000 hover:border-primary-500 disabled:border-neutral-1000 py-1.75 rounded-md px-10 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black h-8 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "height": undefined,
            "width": 12,
          }
        }
      />
      <span
        className="text-bold-caption-200 pt-0.75 leading-3"
      >
        Add Another Species
      </span>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Elements/Inputs/TreeSpeciesInput With Number 1`] = `
<div
  className="relative space-y-2"
>
  <label
    className="inline-block uppercase text-bold-body-300"
    data-testid="txt"
    htmlFor=":r1l:"
  >
    Tree Species Grown *
  </label>
  <p
    className="text-light-body-300 with-inner-html"
    dangerouslySetInnerHTML={
      Object {
        "__html": "List the tree species that you expect to restore on this project, across all sites. Please enter the scientific name for each tree species.",
      }
    }
    data-testid="txt"
    id=":r1l:-description"
  />
  <div>
    <div
      className="mt-8 mb-2 flex justify-between"
    >
      <p
        className="uppercase text-body-900"
        data-testid="txt"
      >
        Tree Species (1)
      </p>
      <p
        className="uppercase text-body-900"
        data-testid="txt"
      >
        Total Count: (23)
      </p>
    </div>
    <div
      className="max-h-[300px] overflow-y-auto"
    >
      <div
        className="relative flex w-full"
      >
        <div
          className="flex-1 relative space-y-2"
        >
          <div
            className="relative"
          >
            <input
              aria-describedby=":r1m:-description"
              aria-invalid={false}
              className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent border-0 border-b py-[10px] pr-4 pl-0 border-b-neutral-400"
              defaultValue="Test"
              id=":r1m:"
              name="name"
              onChange={[Function]}
              onKeyDownCapture={[Function]}
              placeholder="Tree species name"
              type="text"
            />
          </div>
        </div>
        <div
          className="flex-3 relative space-y-2"
        >
          <div
            className="relative"
          >
            <input
              aria-describedby=":r1n:-description"
              aria-invalid={false}
              className="w-full outline-none transition-all duration-300 ease-in-out focus:ring-transparent border-0 border-b py-[10px] pr-4 pl-0 border-b-neutral-400"
              defaultValue={23}
              id=":r1n:"
              name="amount"
              onChange={[Function]}
              onKeyDown={[Function]}
              onKeyDownCapture={[Function]}
              placeholder="Enter value"
              type="number"
            />
          </div>
        </div>
        <button
          className="flex items-center justify-center rounded-full hover:bg-opacity-60 absolute right-0 top-3"
          onClick={[Function]}
        >
          <div
            style={
              Object {
                "height": undefined,
                "width": 22,
              }
            }
          />
        </button>
      </div>
    </div>
    <button
      className="mt-4 w-fit bg-white border border-neutral-1000 hover:border-primary-500 disabled:border-neutral-1000 py-1.75 rounded-md px-10 uppercase disabled:bg-neutral-300 disabled:text-neutral-800 transition whitespace-nowrap text-black h-8 flex items-center justify-center gap-1.5 tracking-wide w-fit-content"
      onClick={[Function]}
    >
      <div
        style={
          Object {
            "height": undefined,
            "width": 12,
          }
        }
      />
      <span
        className="text-bold-caption-200 pt-0.75 leading-3"
      >
        Add Another Species
      </span>
    </button>
  </div>
</div>
`;
